# botgarden-core

./: .cursorrules  .gitignore  PLAN_CLAUDE.md  PLAN_GPT.md  README.md  docker-compose.yml  env.example
bot-template/: Dockerfile  deploy-bot.sh  docker-compose.bot.yml  docker-compose.yml  env.example  pyproject.toml  requirements.txt
bot-template/app/: __main__.py
nginx/: botgarden-ssl.conf.template  nginx.conf
prompts/: TASK.md
scripts/: deploy-core.sh  deploy-static.sh
static/: index.html
