[project]
name = "botgarden-bot"
version = "1.0.0"
description = "Telegram bot for botgarden infrastructure"
requires-python = ">=3.12"
dependencies = [
    "aiogram==3.10.0",
    "aiohttp==3.9.5",
    "python-dotenv==1.0.1",
    "psycopg2-binary==2.9.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
